k8s/credit-service/deploymentConfig_v2.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"postgresql-demo"}]'
  labels:
    app: creditservice
    app.kubernetes.io/component:  creditservice-dc
    app.kubernetes.io/instance: backend
    app.kubernetes.io/part-of: credit-app
    app.openshift.io/runtime: spring-boot
    deploymentconfig: creditservice
    version: v2
  name: creditservice
spec:
  replicas: 1
  revisionHistoryLimit: 3
  test: false
  selector:
    name: creditservice
    app: creditservice
    deploymentconfig: creditservice
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 3600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  template:
    metadata:
      name: creditservice
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: creditservice
        app: creditservice
        deploymentconfig: creditservice
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: spring-boot
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            privileged: false
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: prometheus
              containerPort: 9779
              protocol: TCP
            - name: jolokia
              containerPort: 8778
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            quay.io/froberge/creditservice:v2
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  # triggers:
  #   - type: ConfigChange
  #   - type: ImageChange
  #     imageChangeParams:
  #       automatic: true
  #       containerNames:
  #         - spring-boot
  #       from:
  #         kind: ImageStreamTag
  #         namespace: uc1-zonea
  #         name: 'creditservice:v2'
