k8s/credit-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creditservice
  labels:
    app: creditservice    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: creditservice
