k8s/credit-service/virtual-service-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: creditservice
spec:
  hosts:
  - creditservice
  http:
  - route:
    - destination:
        host: creditservice
        subset: version-v1
      weight: 50
    - destination:
        host: creditservice
        subset: version-v2
      weight: 50
---
