k8s/credit-service/virtual-service_v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: creditservice
spec:
  hosts:
  - creditservice
  http:
  - route:
    - destination:
        host: creditservice
      weight: 100
---
